# LLM-for-Waldur

./: .dockerignore  .gitignore  README.md  pom.xml
.github/workflows/: build-and-deploy.yaml  build.yaml  deploy.yaml  test-k8s.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  gunicorn_conf.py  main.py
backend/app/chains/: chat.py
backend/app/db/: base.py  deps.py  models.py
backend/app/db/crud/: runs.py
backend/app/db/models/: __init__.py  accounts.py  conversations.py  feedback.py  messages.py  runs.py  threads.py  users.py
backend/app/db/scripts/: init_db.py
backend/app/db/test/: setup_test_data.py
backend/app/providers/: base.py
backend/app/redis/: redis_conn.py  redis_runnable.py
backend/app/routers/: feedback.py  messages.py  runs.py  usage.py
backend/app/routes/: usage.py
backend/app/schemas/: feedback.py  messages.py  runs.py
backend/app/services/: errors.py  llm_service.py  logging.py  ollama_worker_in_container.py  request_context.py  worker_ollama.py
backend/ollama_sidecar/: ollama_worker.py  pyproject.toml
backend/python/: pyproject.toml
backend/python/app/: config.py  main.py  schemas.py
backend/python/app/providers/: ollama_provider.py
deploy/images/: Containerfile.backend  Containerfile.frontend  Containerfile.ollama  Containerfile.ollama_worker
deploy/k8s/: backend.yaml  cluster.yaml  frontend.yaml  ingress.yaml  keda.yaml  kustomization.yaml  ollama.yaml  redis.yaml
frontend/: components.json  middleware.ts  package.json
frontend/app/: CustomRuntimeProvider.tsx  MyRuntimeProvider.tsx  RuntimeProvider.tsx  ThreadProvider.tsx  ThreadRuntimeProvider.tsx  feedback-context.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: LastUserMessageActions.tsx  attachment.tsx  feedback-context.tsx  feedback-panel.tsx  markdown-text.tsx  (+3 more)
ollama_sidecar/: ollama_worker.py
ollama_worker/: ollama_worker.py
tests/: api_test.http  live.http  localhost.http
(+17 files in other folders)
