[project]
name = "waldur-llm-backend"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies =  [
    "fastapi>=0.115.0",
    "uvicorn[standard] >=0.30.0",
    "pydantic>=2.7.0",
    "aiohttp>=3.9.5",
    "python-dotenv>=1.0.1",
    "rich>=13.7",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
