[project]
name = "waldur-llm-backend"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies =  [
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.37.0",
    "fastapi>=0.118.0",
    "sse-starlette>=3.0.2",
    "langserve>=0.3.2",
    "langchain-ollama>=0.3.8",
    "structlog>=25.4.0",
    "redis>=6.4.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]